--- a/maven/pom.xml
+++ b/maven/pom.xml
@@ -27,40 +27,46 @@
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
-            	<artifactId>maven-javadoc-plugin</artifactId>
-            	
-            	
+				<artifactId>maven-javadoc-plugin</artifactId>
+
+
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-checkstyle-plugin</artifactId>
 			</plugin>
 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>    
-				<artifactId>maven-jxr-plugin</artifactId>  
-            </plugin>
-            <plugin>
-      			<groupId>org.codehaus.mojo</groupId>
-      			<artifactId>cobertura-maven-plugin</artifactId>
-    		</plugin>
-    		<plugin>
-<groupId>org.apache.maven.plugins</groupId>
-<artifactId>maven-pmd-plugin</artifactId>
- <version>2.5</version>
-</plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jxr-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>cobertura-maven-plugin</artifactId>
+				<version>1.9.7</version>
+				<configuration>
+					<formats>
+						<format>xml</format>
+					</formats>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-pmd-plugin</artifactId>
+				<version>2.5</version>
+			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-changelog-plugin</artifactId>
 			</plugin>
-            
-			
+
+
 		</plugins>
 	</reporting>
-	
+
 	<scm>
-<connection>scm:git:git://github.com/NicolasSellier/testTP1mavenSIR.git</connection>
- <url>https://github.com/NicolasSellier/testTP1mavenSIR.git</url>
-</scm>
-	
+		<connection>scm:git:git://github.com/NicolasSellier/testTP1mavenSIR.git</connection>
+		<url>https://github.com/NicolasSellier/testTP1mavenSIR.git</url>
+	</scm>
+
 
 </project>
